# fastapi_sqlmodel

./: Dockerfile  README.rst  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: song.py
app/api/crud/: auth.py  post.py  songs.py
app/api/models/: user.py
app/api/routers/: auth.py  auth_utils.py  song.py
app/infra/providers/: hash_provider.py  token_provider.py
migrations/: env.py
migrations/versions/: 3987a001c6ad_add_password_user.py  bcaf967c3a58_first.py  c59e1513c93b_init.py
tests/: test_fastapi_sqlmodel.py  test_ping.py  test_post.py
