[tool.poetry]
name = "fastapi_sqlmodel"
version = "0.1.0"
description = ""
authors = ["hotratx <mgviero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.4"
uvicorn = "^0.15.0"
asyncpg = "^0.24.0"
fastapi = {extras = ["all"], version = "^0.70.0"}
alembic = "^1.7.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
